# llm-flows

./: .gitignore  AGENTS.md  Dockerfile  Dockerfile.test  README.md  docker-compose.yml  pyproject.toml
.githooks/: pre-push
.llmflows/: .gitignore
docs/: cli.md  cloud-agents.md  connectors.md  cursor-ide.md  development.md  examples.md  flows.md  usecase.md
flows/: browser-test.json  crypto-news.json  develop-feature.json  feature-brainstorm.json  feature-chat.json  feature-develop.json  feature-discovery-brainstorm.json  feature-discovery.json  feature-release.json  feature-review.json  gh-brainstorm.json  gh-chat.json  gh-develop.json  gh-release.json  llmflows-test-browser.json  llmflows-test.json  poland-ai-news.json  react-js.json  ripper-5.json  youtube-latest.json
llmflows/: __init__.py  config.py
llmflows/cli/: __init__.py  admin.py  agent.py  alias.py  daemon.py  flow.py  mcp.py  mode.py  run.py  runner.py  skill.py  task.py  tools.py  ui.py  upgrade.py
llmflows/db/: __init__.py  database.py  models.py
llmflows/defaults/: __init__.py  complete.md  config.toml  docker-compose.db.yml  flows.json  llmflows-rule.md  one_shot.md  resume.md  start.md  step_error_summary.md  step_post_run.md  step_start.md  step_summary.md
llmflows/docker/: Dockerfile  README.md  pyproject.toml
llmflows/services/: __init__.py  agent.py  audit.py  browser.py  browser_host.py  chat.py  connector_hints.py  container.py  context.py  daemon.py  flow.py  flow_setup.py  gate.py  github.py  google_host.py  mcp.py  network.py  optimizer.py  postgres.py  project.py  run.py  run_daemon.py  skill.py  skillssh.py  space.py  task.py  upgrade.py  worktree.py
llmflows/tools/: browser-server.ts  (+7 more)
scripts/: build.py  install.sh  migrate_sqlite_to_pg.py  test.sh
tests/: __init__.py  conftest.py  test_api.py  test_chat.py  test_config.py  test_connector_hints.py  test_container.py  test_context.py  test_flow_setup.py  test_github.py  test_google_host.py  test_models.py  test_optimizer.py  test_paths.py  test_postgres.py  test_services.py  test_skills.py  test_telegram.py  test_upgrade.py  test_upgrade_runner.py
tools/: browser-server.ts  browser.ts  package.json  web-search.ts
(+897 files in other folders)
