[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmflows"
version = "0.19.12"
description = "Agentic workflow orchestrator with kanban UI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Lukasz Pakula"}
]
keywords = ["ai", "agent", "workflow", "cli", "kanban", "orchestrator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]

dependencies = [
    "click>=8.1.0",
    "sqlalchemy>=2.0.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "websockets>=11.0",
    "python-multipart>=0.0.6",
    "httpx>=0.24.0",
    "alembic>=1.12.0",
    "litellm>=1.50.0",
    "requests>=2.28.0",
    "python-telegram-bot>=20.0",
    "slack-bolt>=1.18",
    "croniter>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/lpakula/llm-flows"
Repository = "https://github.com/lpakula/llm-flows"
Documentation = "https://github.com/lpakula/llm-flows#readme"
Issues = "https://github.com/lpakula/llm-flows/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",
]

[project.scripts]
llmflows = "llmflows.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["llmflows"]

[tool.hatch.build.hooks.custom]
path = "scripts/build.py"

[tool.hatch.build]
include = [
    "llmflows/**/*.py",
    "llmflows/**/*.md",
    "llmflows/**/*.html",
    "llmflows/**/*.toml",
    "llmflows/**/*.json",
    "llmflows/**/*.js",
    "llmflows/**/*.ts",
    "llmflows/**/*.tsx",
    "llmflows/**/*.css",
    "llmflows/**/*.svg",
    "llmflows/**/*.mako",
    "scripts/*.py",
]
exclude = [
    "llmflows/ui/frontend/node_modules/**",
    "llmflows/ui/frontend/dist/**",
]
